--- a/m8_머신러닝적용/ML_추천_행렬 분해 기반의 잠재 요인 협업.ipynb
+++ b/m8_머신러닝적용/ML_추천_행렬 분해 기반의 잠재 요인 협업.ipynb
@@ -5,7 +5,7 @@
    "id": "a53fdc15",
    "metadata": {},
    "source": [
-    "행렬 분해를 이용한 잠재 요인협업 필터링 실습"
+    "### 행렬 분해를 이용한 잠재 요인협업 필터링 실습"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "b77a3224",
    "metadata": {},
    "source": [
-    "행렬 분해 잠재 요인 협업 필터링은 SVD나 NMF 등을 적용할 수 있는데, 일반적으로 행렬 분해에는 SVD가 자주 사용되지 만 사용자-아이템 평점 행렬에는 사용자가 평점을 매기지 않는 널 데이터가 많기 때문에 주로 SGD나 ALS 기반의 행렬 분해르르 이용한다."
+    "행렬 분해 잠재 요인 협업 필터링은 SVD나 NMF 등을 적용할 수 있는데, 일반적으로 행렬 분해에는 SVD가 자주 사용되지만 사용자-아이템 평점 행렬에는 사용자가 평점을 매기지 않는 Null 데이터가 많기 때문에 주로 SGD나 ALS 기반의 행렬 분해를 이용한다."
    ]
   },
   {
