--- a/m6_머신러닝알고리즘이해및활용/ML_numpy.ipynb
+++ b/m6_머신러닝알고리즘이해및활용/ML_numpy.ipynb
@@ -550,13 +550,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 1,
    "id": "ad8b4059",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 행렬 내적\n",
-    "\n",
     "a = np.array([[1,2,3],\n",
     "             [4,5,6]])\n",
     "b = np.array([[7,8],\n",
@@ -566,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 2,
    "id": "4c2cce24",
    "metadata": {},
    "outputs": [
@@ -577,13 +576,40 @@
        "       [139, 154]])"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.dot(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "489d98ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 3],\n",
+       "       [2, 4]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 전치 행렬\n",
+    "a = np.array([[1,2],\n",
+    "             [3,4]])\n",
+    "# a.T\n",
+    "b = a.transpose()\n",
+    "b"
    ]
   }
  ],
