--- a/m6_머신러닝알고리즘이해및활용/ML_XGBooster.ipynb
+++ b/m6_머신러닝알고리즘이해및활용/ML_XGBooster.ipynb
@@ -349,6 +349,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "973e90d3",
+   "metadata": {},
+   "source": [
+    "### XGBOOST 하이퍼 파라미터\n",
+    "- n_estimators : weak learner의 개수이다. weak learner가 순차적으로 오류를 보정하므로 개수가 많을수록 예측 성능이\n",
+    "일정 수준까지는 좋아질 수 있다. 하지만 개수가 많을수록 수행 시간이 오래 걸린다. 기본값은 100이다.\n",
+    "- learning_rate : 학습을 진행할 때마다 적용하는 학습률이다. Weak learner가 순차적으로 오류 값을 보정해 나가는 데 적용하는 계수이다. 0 ~ 1사이의 값을 지정할 수 있으며 기본값은 0.1이다. \n",
+    "    - 너무 작은 값을 적용하면 업데이트 되는 값이 작아져서 최소 오류 값을 찾아 예측 성능이 높아질 가능성이 높다.\n",
+    "    - 하지만 많은 weak learner는 순차적인 반복이 필요해서 수행 시간이 오래 걸리고, 값을 너무 작게 설정 하면 모든 weak learner의 반복이 완료되어도 최소 오류 값을 찾지 못할 수도 있다.\n",
+    "    - 반대로 큰 값을 적용하면 최소 오류 값을 찾지 못하고 그냥 지나쳐 버려 예측 성능이 떨어질 가능성은 높지만, 빠른 수행이 가능하다.\n",
+    "    - 그렇기 때문에 n_estimators 값과 조합하여 보완해 나가며 사용한다고 합니다.\n",
+    "- eval_set : 성능 평가를 수행할 평가용 데이터 세트를 설정\n",
+    "- eval_metric : 평가 세트에 적용할 성능 평가 방법, 분류일 경우 주로 'error'(분류 오류), 'logloss'를 적용한다. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "702edc9e",
@@ -723,7 +740,7 @@
    ],
    "source": [
     "# 사이킷런 래퍼 XGBoost로 만들어진 모델의 예측 성능 평가\n",
-    "# 테스트 실제 레이블 값 y_test, 예측 레이블 w_preds\n",
+    "# 테스트 실제 레이블 값 y_test, 예측 레이블 w_preds, 예측 레이블값이 가지는 확률\n",
     "get_clf_eval(y_test,w_preds,w_preds_proba)"
    ]
   },
