--- a/m6_머신러닝알고리즘이해및활용/ML_Santander Customer Satisfaction.ipynb
+++ b/m6_머신러닝알고리즘이해및활용/ML_Santander Customer Satisfaction.ipynb
@@ -9,8 +9,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d01ed03c",
+   "metadata": {},
+   "source": [
+    "### 데이터 사전 이해 \n",
+    "- 산탄데르 고객 만족 예측 분석은 370개의 피처로 주어진 데이터 세트 기반에서 고객 만족 여부를 예측하는 것이다.\n",
+    "- 클래스 레이블 명은 TARGET이며, 이 값이 1이면 불만을 가진 고객, 0이면 만족한 고객이다.\n",
+    "- 모델 성능 평가는 ROC-AUC 평가\n",
+    "- 대부분이 만족이고 불만족인 데이터는 일부일 것이기 때문에 정확도 수치보다는 ROC-AUC가 더 적합하다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e26cc6a1",
+   "metadata": {},
+   "source": [
+    "### 데이터 전처리"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "a5ca4d18",
    "metadata": {},
    "outputs": [
@@ -237,7 +257,7 @@
        "[5 rows x 371 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "7a2cd56c",
    "metadata": {},
    "outputs": [
@@ -279,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "1afb23d6",
    "metadata": {},
    "outputs": [
@@ -295,10 +315,14 @@
     }
    ],
    "source": [
+    "# 전체 데이터에서 만족과 불만족의 비율을 확인\n",
+    "# 레이블인 Target 속성의 값의 분포를 살펴본다\n",
+    "\n",
     "print(cust_df['TARGET'].value_counts()) # 구성 요소 확인\n",
-    "# tartget이 1이면 불만 0이면 만족\n",
+    "# tartget이 1이면 불만, 0이면 만족\n",
     "unsatisfied_cnt = cust_df[cust_df['TARGET']==1].TARGET.count() # 불만인 고객 카운팅\n",
-    "total_cnt = cust_df.TARGET.count() \n",
+    "\n",
+    "total_cnt = cust_df.TARGET.count() # 1과 0값이 합쳐있는 전체 고객 데이터\n",
     "# 불만족 비율 -> 불만족 개수 / 전체 개수 \n",
     "print('unsatisfied 비율은 {0:.2f}'.format((unsatisfied_cnt/total_cnt)))\n",
     "# 불만족 고객은 얼마 되지 않는 4%에 불과함"
@@ -654,7 +678,7 @@
    "source": [
     "# DataFrame의 describe()메서드를 이용해 각 피처의 값 분포를 간단히 확인\n",
     "cust_df.describe()\n",
-    "# var3컬럼의 경우 min 값이 -999999임 -> NaN이나 특정 예외 값을 -999999로 변환했을 것이다."
+    "# var3컬럼의 경우 min 값이 -999999임 -> NaN이나 특정 예외 값을 -99999로 변환했을 것이다."
    ]
   },
   {
@@ -682,7 +706,9 @@
     }
    ],
    "source": [
-    "print(cust_df.var3.value_counts()[:10]) # value_counts는 특정 컬럼의 개별적인 값의 빈도를 알 수 있다"
+    "# var3의 값을 value_counts 해보면 -999999 값이 116개가 있음을 알 수 있다\n",
+    "# var3은 숫자 형이고, 다른 값에 비해 -999999 값이 \n",
+    "print(cust_df.var3.value_counts()[:10]) # 10개출력"
    ]
   },
   {
@@ -711,8 +737,8 @@
     }
    ],
    "source": [
-    "# 피처 세트와 레이블 세트 분리, 레이블 칼럼은 DataFrame의 맨 마지막에 위치해 칼럼 위치 -1로 분리\n",
-    "X_features = cust_df.iloc[:,:-1] # target만 제외시킴 -> 열 맨끝만 제외\n",
+    "# 피처 데이터 세트와 레이블 데이터 세트 분리, 레이블 칼럼은 DataFrame의 맨 마지막에 위치해 칼럼 위치 -1로 분리\n",
+    "X_features = cust_df.iloc[:,:-1] # target만 제외시킴 -> 행은 처음 끝까지, 열 처음 마지막 전까지만(맨 끝 타켓값은 제외)\n",
     "y_labels = cust_df.iloc[:,-1] # 열 하나만 -> target만 선택\n",
     "print('피처 데이터 shape:{0}'.format(X_features.shape))"
    ]
@@ -741,20 +767,31 @@
     }
    ],
    "source": [
-    "# 학습과 성능 평가를 위해 원본 데이터에서 -> 학습 데이터 테스트 데이터를 분리함\n",
-    "# 비대칭한 데이터 세트이므로 클래스인 Target 값 분포도가 학습 데이터와 테스트 데이터 세트에 모두 비슷하게 추출됐는지 확인 \n",
+    "# 학습과 성능 평가를 위해 원본 데이터에서 -> 학습 데이터 세트와 테스트 데이터 세트를 분리함\n",
+    "# 비대칭한 데이터 세트이므로 클래스인 Target값 분포도가 학습 데이터와 테스트 데이터 세트에 모두 비슷하게 추출됐는지 확인 \n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_features, y_labels, test_size=0.2, random_state=0)\n",
     "\n",
-    "train_cnt = y_train.count()\n",
-    "test_cnt = y_test.count()\n",
+    "train_cnt = y_train.count() # 레이블 학습 데이터 카운팅\n",
+    "test_cnt = y_test.count() # 레이블 테스트 데이터 카운팅\n",
     "print('학습 세트 Shape:{0},  테스트 세트 Shape:{1}'.format(X_train.shape, X_test.shape))\n",
     "\n",
     "print('학습 세트 레이블 값 분포 비율')\n",
     "print(y_train.value_counts()/train_cnt)\n",
     "print('\\n 테스트 세트 레이블 값 분포 비율')\n",
-    "print(y_test.value_counts()/test_cnt)"
+    "print(y_test.value_counts()/test_cnt)\n",
+    "\n",
+    "# 학습과 테스트 데이터 세트 모두 TARGET의 값의 분포가\n",
+    "# 원본 데이터와 유사하게 전체 데이터의 4% 정도의 불만족 값(1)으로 만들어졌다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa6bd289",
+   "metadata": {},
+   "source": [
+    "### XGBoost 모델 학습과 하이퍼 파라미터 튜닝"
    ]
   },
   {
@@ -892,7 +929,7 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "# n_estimators는 500으로, random state는 예제 수행 시마다 동일 예측 결과를 위해 설정\n",
+    "# n_estimators Weak learner의 개수로 500으로, random state는 예제 수행 시마다 동일 예측 결과를 위해 설정\n",
     "xgb_clf = XGBClassifier(n_estimators=500, random_state=156)\n",
     "\n",
     "# eval_metric -> 성능 평가 지표를 acu로, early_stopping_rounds-> 조기 중단 파라미터는 100으로 설정하고 학습 수행\n",
@@ -903,6 +940,16 @@
     "xgb_roc_score = roc_auc_score(y_test, xgb_clf.predict_proba(X_test)[:,1], average='macro')\n",
     "\n",
     "print('ROC AUC : {0:.4f}'.format(xgb_roc_score))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63916fde",
+   "metadata": {},
+   "source": [
+    "### 하이퍼 파라미터 튜닝\n",
+    "- 칼럼의 개수가 많으므로 과적합 가능성을 가정하고 max_depth, min_child_weight, colsample_bytree를 일차 튜닝 대상으로 선정한다.\n",
+    "- 학습 시간이 많이 필요한 ML 모델인 경우 하이퍼 파라미터 튜닝을 수행하는 요령 중 첫 번째는 먼저 2~ 3개 정도의 파라미터를 결합해 최적 파라미터를 찾아낸 뒤에 이 최적 파라미터를 기반으로 다시 1~ 2개 파라미터를 결합해 파라미터 튜닝을 수행"
    ]
   },
   {
@@ -926,7 +973,10 @@
     "print('GridSearchCV 최적 파라미터 :', gridcv.best_params_)\n",
     "\n",
     "xgb_roc_score = roc_auc_score(y_test, gridcv.predict_proba(X_test)[:,1], average='macro')\n",
-    "print('ROC AUC: {0:.4f}'.format(xgb_roc_score))"
+    "print('ROC AUC: {0:.4f}'.format(xgb_roc_score))\n",
+    "\n",
+    "# 최적 파라미터\n",
+    "# colsample_bytree: 0.75, max_depth: 7, min_child_weight: 1"
    ]
   },
   {
@@ -936,6 +986,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 앞에서 구한 최적화 하이퍼 파라미터를 기반으로 다른 하이퍼 파라미터를 변경 또는 추가해 다시 최적화 진행\n",
+    "# GridSearchCV로 구한 최적 하이퍼 파라미터인 colsample_bytree: 0.75, max_depth: 7, min_child_weight: 1로 설정한 뒤\n",
     "# n_estimators는 1000으로 증가시키고, learning_rate =0.02로 감소, reg_alpha = 0.03으로 추가함\n",
     "xgb_clf = XGBClassifier(n_estimators =1000, random_state=156, learnin_rat =0.02, max_depth =7, min_child_weight=1,\n",
     "                       colsample_bytree=0.75, reg_alpha=0.03)\n",
@@ -945,6 +997,19 @@
     "\n",
     "xgb_roc_score = roc_auc_score(y_test, xgb_clf.predict_proba(X_test)[:,1], average='macro')\n",
     "print('ROC AUC : {0:.4f}'.format(xgb_roc_score))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "311dd6a5",
+   "metadata": {},
+   "source": [
+    "### 단점 \n",
+    "- 이전 테스트보다 살짝 향상된 결과를 보여주지만 XGBOOST가 GBM보다는 빠르지만 아무래도 GBM을 기반으로 하고 있기 때문에 수행 시간이 상당히 더 많이 요구된다.\n",
+    "- 그 때문에 하이퍼 파라미터를 다양하게 나열해 파라미터를 튜닝하는 것은 많이 시간이 소모 된다.\n",
+    "- 앙상블 계열 알고리즘에서 하이퍼 파라미터 튜닝으로 성능 수치 개선이 급격하게 되는 경우는 많지 않다.\n",
+    "- 그 이유는 앙상블 계열 알고리즘은 과적합이나 잡음에 기본적으로 뛰어난 알고리즘이기에 그렇다\n",
+    "- 하이퍼 파라미터 튜닝보단 데이터 전처리 피처화 하는것이 더 중요"
    ]
   },
   {
@@ -984,6 +1049,18 @@
     "fig, ax = plt.subplots(1,1,figsize=(10,8))\n",
     "plot_importance(xgb_clf, ax=ax, max_num_features=20, height=0.4)\n",
     "# XGBoost의 예측 성능을 좌우하는 가장 중요한 피처는 var38, var15 순서이다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4700bb87",
+   "metadata": {},
+   "source": [
+    "### Lightgbm\n",
+    "- Lightgmb은 XGBoost보다 더 빠른 수행시간의 장점을 가진다.\n",
+    "- 메모리 사용량도 상대적으로 적다.\n",
+    "- 일반 GBM 계열의 균형 트리 분할(Levek Wise) 방식이 아닌 리프 중심 트리 분할(Leaf - wise)인 비대칭 방식을 사용한다.\n",
+    "- 단점으로는 작은 dataset 적용시 과적합 발생 가능성이 있다."
    ]
   },
   {
@@ -3566,16 +3643,17 @@
     }
    ],
    "source": [
+    "# GridSearchCV로 좀 더 다양한 하이퍼 파라미터에 대한 튜닝을 수행\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "# 하이퍼 파라미터 테스트의 수행 속도를 향상시키기 위해 n_estimators를 200으로 감소\n",
     "# 튜닝 대상 num_leaves, max_depth, min_child_samples, subsample\n",
     "lgbm_clf = LGBMClassifier(n_estimators=200)\n",
     "\n",
-    "params = {'num_leaves':[32,64], # 하나의 트리가 가질 수 있는 최대 리프 개수\n",
-    "         'max_depth':[128,160], # 최대 깊이\n",
-    "         'min_child_samples':[60,100], # min_samples_leaf -> 리프 노드가 되기 위한 최소한으로 필요한 레코드의 수\n",
-    "         'subsample':[0.8,1]}\n",
+    "params = {'num_leaves':[32, 64], # 하나의 트리가 가질 수 있는 최대 리프 개수\n",
+    "         'max_depth':[128, 160], # 최대 깊이\n",
+    "         'min_child_samples':[60, 100], # min_samples_leaf -> 리프 노드가 되기 위한 최소한으로 필요한 레코드의 수\n",
+    "         'subsample':[0.8, 1]} # 트리가 커져서 과적합되는 것을 제어 데이터 샘플링하는 비율을 지정\n",
     "\n",
     "# cv는 3으로 지정\n",
     "gridcv = GridSearchCV(lgbm_clf, param_grid=params, cv=3)\n",
